<resources>
    <string name="app_name">StudeoFin</string>
    <string name="action_settings">Settings</string>
    <string name="add_meta">Adicionar Meta</string>
    <string name="add_rec_desp">Adicionar Receita/Despesa</string>
    <string name="cadastrar_senha">Senha</string>
    <string name="cancelar">Cancelar</string>
    <string name="cancelar_conta">Cancelar conta</string>
    <string name="categoria">Categoria:</string>
    <string name="close_drawer">Fechar</string>
    <string name="coluna_categoria">Categoria</string>
    <string name="coluna_economizado">Vlr. Atingido</string>
    <string name="coluna_data">Data</string>
    <string name="coluna_data_prev">Data Prev.</string>
    <string name="coluna_descricao">Descrição</string>
    <string name="coluna_lancamento">Lançamento</string>
    <string name="coluna_meta">Meta</string>
    <string name="coluna_tipo">Tipo</string>
    <string name="coluna_valor">Valor</string>
    <string name="criar_conta">Criar uma conta</string>
    <string name="data">Data:</string>
    <string name="descricao">Descrição:</string>
    <string name="despesa">Despesa</string>
    <string name="entrar">Entrar</string>
    <string name="email">E-mail</string>
    <string name="esqueceu">Esqueceu a senha?</string>
    <string name="excluir">Excluir</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_home">Home</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="meta">Meta</string>
    <string name="msg_atualizar">Dados atualizados.</string>
    <string name="msg_cadastro_efetuado">Cadastro efetuado com sucesso!</string>
    <string name="msg_cadastro_erro">Este endereço de e-mail já está cadastrado no sistema. Cadastro recusado!</string>

    <string name="msg_campos_invalidos">Campos obrigatórios não preenchidos.</string>
    <string name="msg_email_enviado">Sua senha foi enviada para o seu e-mail.</string>
    <string name="msg_excluir">Dados excluídos.</string>
    <string name="msg_falha_autenticacao">E-mail e/ou senha incorreto.</string>
    <string name="msg_logoff_efetuado">Sessão encerrada.</string>
    <!--string name="msg_nao_autenticado">Não autenticado, rever os campos preenchidos.</string-->
    <string name="msg_salvar">Dados salvos.</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nome">Nome</string>
    <string name="objetivo">Objetivo:</string>
    <string name="ok">OK</string>
    <string name="open_drawer">Abrir</string>
    <string name="receita">Receita</string>
    <string name="recuperar_senha">Recuperar Senha</string>
    <string name="salvar">Salvar</string>
    <string name="sair">Sair</string>
    <string name="senha">Senha</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="texto_cancelar_conta">Você irá apagar todos seus dados! Deseja realmente cancelar sua conta?</string>
    <string name="texto_logoff">Você tem certeza que deseja fazer logoff?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="usuario">Usuário</string>
    <string name="valor">Valor:</string>

    <string name="fonte">Fonte da Fortuna</string>
    <string name="fui_la">Canal Fui Lá e Fiz</string>
    <string name="investidor_sardinha">Investidor Sardinha</string>
    <string name="me_poupe">Me Poupe</string>
    <string name="primo_rico">Primo Rico</string>
    <string name="uol">Uol Economia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>