<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:background="#F3F3F3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/des_meta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/coluna_meta"
            android:textSize="16dp"
            android:textColor="@color/black">
        </TextView>

        <TextView
            android:id="@+id/edt_vlrMeta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/coluna_valor"
            android:textSize="16dp"
            android:textColor="@color/black">
        </TextView>

        <TextView
            android:id="@+id/edt_dtaMeta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/coluna_data"
            android:textSize="16dp"
            android:textColor="@color/black">
        </TextView>

        <TextView
            android:id="@+id/vlr_atingido_meta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/coluna_economizado"
            android:textSize="16dp"
            android:textColor="@color/black">
        </TextView>

    </LinearLayout>

</RelativeLayout>