<?xml version="1.0" encoding="utf-8" standalone="no"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/meta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/coluna_meta"
            android:textColor="@color/black"
            android:textSize="16dp">
        </TextView>

        <TextView
            android:id="@+id/meta_valor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/coluna_valor"
            android:textSize="16dp"
            android:textColor="@color/black"
           >
        </TextView>

        <TextView
            android:id="@+id/meta_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/coluna_data"
            android:textColor="@color/black"
            android:textSize="16dp">
        </TextView>

        <TextView
            android:id="@+id/meta_economizado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/coluna_economizado"
            android:textSize="16dp"
            android:textColor="@color/black">
        </TextView>

    </LinearLayout>

    <ListView android:id="@+id/lista_metas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginHorizontal="12dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_desc_lancamento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/objetivo"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/edt_desc_meta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="14dp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:text="@string/valor"
                    android:textColor="@color/black">
                </TextView>

                <EditText
                    android:id="@+id/edt_vlrMeta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:textSize="14dp"
                    android:textColor="@color/black">
                </EditText>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:text="@string/coluna_data_prev"
                    android:textColor="@color/black"
                    android:layout_marginLeft="8dp">
                </TextView>

                <EditText
                    android:id="@+id/edt_dtaMeta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:inputType="date"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <ImageButton
                    android:id="@+id/btn_calendario"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_calendar_plus"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_add_meta"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/add_meta"
                    android:background="@drawable/round_corner_button"
                    android:textAllCaps="false"
                    android:textSize="16dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_weight="2">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_salvar_meta"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginRight="4dp"
                    android:text="@string/salvar"
                    android:background="@drawable/round_corner_button"
                    android:textAllCaps="false"
                    android:textSize="16dp"
                    android:layout_weight="1"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_excluir_meta"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="4dp"
                    android:text="@string/excluir"
                    android:background="@drawable/round_corner_button"
                    android:textAllCaps="false"
                    android:textSize="16dp"
                    android:layout_weight="1"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>