<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroUsuario">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical"
        android:paddingBottom="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="24dp"
            android:background="@color/cinza_escuro"
            android:text="@string/usuario"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="22dp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imagem_usuario"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@android:drawable/ic_menu_camera"
            android:layout_marginBottom="24dp"
            android:background="@color/cinza_escuro"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/edtNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/cinza_escuro"
                android:hint="@string/nome"
                android:inputType="textEmailAddress"
                android:textSize="14dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/edtSobrenome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/cinza_escuro"
                android:hint="@string/sobrenome"
                android:inputType="textEmailAddress"
                android:textSize="14dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/cinza_escuro"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="14dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/edtSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/cinza_escuro"
                android:hint="@string/cadastrar_senha"
                android:inputType="textEmailAddress"
                android:textSize="14dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_salvar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/amarelo"
            android:padding="12dp"
            android:text="@string/salvar"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textAllCaps="false"/>

        <TextView
            android:id="@+id/link_cancelar_conta"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/cancelar_conta"
            android:textColor="@color/vermelho"
            android:textSize="14dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>