<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogoffActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical"
        android:paddingBottom="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="24dp"
            android:background="@color/cinza_escuro"
            android:gravity="center"
            android:text="@string/sair"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/txtLogoff"
            android:layout_width="355dp"
            android:layout_height="351dp"
            android:layout_marginBottom="24dp"
            android:background="@color/black"
            android:gravity="center"
            android:text="@string/texto_logoff"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22dp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_logoff"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/vermelho"
            android:padding="12dp"
            android:text="@string/ok"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textAllCaps="false"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancelar_logoff"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/amarelo"
            android:padding="12dp"
            android:text="@string/cancelar"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textAllCaps="false"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>