<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginHorizontal="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/txtLogoff"
                android:layout_width="355dp"
                android:layout_height="400dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/texto_cancelar_conta"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sair"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/round_corner_button"
                android:padding="8dp"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancelar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/round_corner_button"
                android:padding="6dp"
                android:text="@string/cancelar"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16dp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>